--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "baseimage-docker"]
 	path = baseimage-docker
 	url = git@github.com:datacratic/baseimage-docker.git
+[submodule "ext/libhubbub"]
+	path = ext/libhubbub
+	url = git@github.com:mldbai/libhubbub.git
